--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -17,7 +17,7 @@
     "- **Lukas Bucheli**\n",
     "\n",
     "\n",
-    "Die CKW AG ist ein zentralschweizer Energieunternehmen, welches sich aufgrund der Energiestrategie 2050 verpflichten musste bis 2027 sämtliche traditionellen Zähler durch Smartmeter zu ersetzen. Sie sollen Teil des Smart Grid werden. Mit einem Smart Grid erhofft man sich eine effizientere Energieversorgung. Die Smartmeter sind ein integrierter Bestandteil des Smart Grid und ermöglichen dadurch neue Funktionen wie intelligente Steuerungen. Besonders durch die aufkommende dezentralisierte Energieerzeugung mit erneuerbaren Energien bei privaten Haushalten, müssen intelligent gesteuert werden, damit das Stromnetz ausbalanciert bleibt. Mit diesen Smartmeter wird auch der Echtzeit-Zugriff auf die Zählerdaten für den Endkunden ermöglicht. Dadurch erhofft sich das Bundesamt für Energie (BFE) einen bewussteren Umgang mit dem Strom und dadurch auch diesen zu sparen (BFE, 2021 [Online-Quelle](https://www.bfe.admin.ch/bfe/de/home/versorgung/stromversorgung/stromnetze/smart-grids.html)).\n",
+    "Die CKW AG ist ein zentralschweizer Energieunternehmen, welches sich aufgrund der Energiestrategie 2050 verpflichten musste, bis 2027 sämtliche traditionellen Zähler durch Smartmeter zu ersetzen. Sie sollen Teil des Smart Grid werden. Mit einem Smart Grid erhofft man sich eine effizientere Energieversorgung. Die Smartmeter sind ein integrierter Bestandteil des Smart Grid und ermöglichen dadurch neue Funktionen wie intelligente Steuerungen. Besonders durch die aufkommende dezentralisierte Energieerzeugung mit erneuerbaren Energien bei privaten Haushalten, müssen intelligent gesteuert werden, damit das Stromnetz ausbalanciert bleibt. Mit diesen Smartmeter wird auch der Echtzeit-Zugriff auf die Zählerdaten für den Endkunden ermöglicht. Dadurch erhofft sich das Bundesamt für Energie (BFE) einen bewussteren Umgang mit dem Strom und dadurch auch diesen zu sparen (BFE, 2021 [Online-Quelle](https://www.bfe.admin.ch/bfe/de/home/versorgung/stromversorgung/stromnetze/smart-grids.html)).\n",
     "\n",
     "## Fragestellung\n",
     "In dieser Arbeit wird folgende Fragestellung versucht zu beantworten:\n",
@@ -33,7 +33,7 @@
     "# Datenquellen und Datenbank\n",
     "In diesem Notebook werden die Datenquellen beschrieben sowie deren Herkunft. Aufgrund der grossen Datenmengen wird ein Data Warehouse angelegt. Dazu werden die Daten in eine SQLite Datenbank geladen. Dies erlaubt in der späteren Auswertungen vordefinierte Views zu erstellen und diese für die weitere Verwendung zu nutzen.\n",
     "\n",
-    "> !! Dieses Notebook muss zuerst ausgeführt werden, damit die Datenbank erstellt wird. Sie ist zu gross um diese direkt in Github hochzuladen. Die Ausführung erfordert eine lokale Jupyter Instanz in welcher das Github-Repo geklont wird!!\n",
+    "> !! Dieses Notebook muss zuerst ausgeführt werden, damit die Datenbank erstellt wird. Sie ist zu gross, um diese direkt in Github hochzuladen. Die Ausführung erfordert eine lokale Jupyter Instanz,ƒ in welcher das Github-Repo geklont wird!!\n",
     "\n",
     "## Eingesetzte Module\n",
     "Für dieses Notebook werden folgende Module eingesetzt:\n",
@@ -118,10 +118,10 @@
     "> `SELECT MAX(strftime('%Y-%m-%d %H:%M', dataTime)) FROM meteoData;`\n",
     "\n",
     "__Automatische ID__\n",
-    "Damit automatisch ein eindeutiger Primary Key generiert wird muss beim Import der Daten, der Platzhalter für das ID-Attribut leergelassen werden und mit NULL gefüllt werden. So wird automatisch ein Primary Key vergeben.\n",
+    "Damit automatisch ein eindeutiger Primary Key generiert wird, muss beim Import der Daten, der Platzhalter für das ID-Attribut leergelassen werden und mit NULL gefüllt werden. So wird automatisch ein Primary Key vergeben.\n",
     "\n",
     "__No Value Handling__\n",
-    "Leere Werte in den Datenquellen welche mit nan, NaN, na, etc. gelistet sind, müssen mit NULL ersetzt werden. Sonst wird der Wert als String interpretiert und gibt einen Fehler aus, wenn es sich um numerische Werte handelt."
+    "Leere Werte in den Datenquellen, welche mit nan, NaN, na, etc. gelistet sind, müssen mit NULL ersetzt werden. Sonst wird der Wert als String interpretiert und gibt einen Fehler aus, wenn es sich um numerische Werte handelt."
    ]
   },
   {
@@ -129,7 +129,7 @@
    "metadata": {},
    "source": [
     "### Erstellen des Datenbank Files\n",
-    "Hier wird die Datenbank angelegt. Ist das File nicht vorhanden, wird dieses automatisch angelegt. Es wird nicht überprüft ob doppelte Daten vorhanden sind."
+    "Hier wird die Datenbank angelegt. Ist das File nicht vorhanden, wird dieses automatisch angelegt. Es wird nicht überprüft, ob doppelte Daten vorhanden sind."
    ]
   },
   {
@@ -342,7 +342,7 @@
     "\n",
     "**Verfügbarkeit:** Das Dataset ist öffentlich verfügbar und kann durch jede Person heruntergeladen werden.\n",
     "\n",
-    "**Preis:** Das Dataset wird kostenlos zu Verfügung gestellt.\n",
+    "**Preis:** Das Dataset wird kostenlos zur Verfügung gestellt.\n",
     "\n",
     "#### Inhaltliche Analyse und Schwierigkeiten \n",
     "Es sind zehn Spalten in dem CSV Dataset vorhanden mit Total 5733 Zeilen. Die Spalten sind selbstsprechend. Die Spalte \"Zusatzziffer\" ist eine Post interne Ziffer und ist für die weiterführende Analyse nicht relevant. Auffallend sind die 20 null Werte in der Spalte \"Kantonskürzel\".\n",
@@ -582,7 +582,7 @@
     "\n",
     "**Verfügbarkeit:** Das Dataset ist öffentlich verfügbar und kann durch jede Person heruntergeladen werden.\n",
     "\n",
-    "**Preis:** Das Dataset wird kostenlos zu Verfügung gestellt.\n",
+    "**Preis:** Das Dataset wird kostenlos zur Verfügung gestellt.\n",
     "\n",
     "#### Inhaltliche Analyse und Schwierigkeiten \n",
     "Die drei relevanten CSV-Dateien MainCategoryCatalogue, PlantCategoryCatalogue und SubCategoryCatalogue sind ausgelagerte Kategorien Definitionen. Diese Dateien sind immer gleich aufgebaut. Zuerst wird die ID angegeben und anschliessend die jeweilige Textbeschreibung in verschiedenen Sprachen (de, fr, it und en). In der PlantCategoryCatalogue Datei werden die detaillierten Kraftwerkstypen angegeben.\n",
@@ -1341,7 +1341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die Hauptdatei ts-x-21.03.01 beinhaltet sämtliche Daten. Die Schwierigkeit liegt in der Mischung der verschiedenen Indikatoren und dem dazugehörigen Zeiträumen. Die Zeiträume müssen als String gesichert werden, da z.T. zwei Jahreszahlen angegeben sind. Bei der BFS-Nummer ist ersichtlich das die Schweiz als CH hinterlegt ist. Damit alles als Integer behandelt werden kann, wird CH in 0 umgeschrieben. Von den 89093 Zeilen sind bei der Spalte Vergleich Zeitraum nur 4346 Daten vorhanden. Da die Vergleiche in dem vorliegenden Kontext nicht relevant sind, können diese ignoriert werden. Es fällt noch auf, dass bei den VALUE 4148 Daten fehlen. Wenn man diese fehlende Daten betrachtet erkennt man das dies mit dem Status zusammenhängt. Ein Blick auf die Metadaten-Beschreibung gibt Aufschluss darüber. Daten die mit M gekennzeichnet sind, entfallen, weil trivial oder Begriffe nicht anwendbar. Der Status Q bedeutet, Entfällt aus Datenschutzgründen. Daher können auch diese Daten ignoriert werden. Der Status wird aus diesem Grund nicht in die Datenbank importiert. Der Vergleichszeitraum ist für diese Arbeit nicht verwendbar. Die Daten stammen aus dem Jahr 2019 und die Smartmeter Daten werden erst seit 2020 erfasst. Daher ergibt sich keine Überschneidung und ermöglicht daher keine Untersuchung über die Zeit im Zusammenhang mit dem Stromverbrauch.\n",
+    "Die Hauptdatei ts-x-21.03.01 beinhaltet sämtliche Daten. Die Schwierigkeit liegt in der Mischung der verschiedenen Indikatoren und den dazugehörigen Zeiträumen. Die Zeiträume müssen als String gesichert werden, da z.T. zwei Jahreszahlen angegeben sind. Bei der BFS-Nummer ist ersichtlich, dass die Schweiz als CH hinterlegt ist. Damit alles als Integer behandelt werden kann, wird CH in 0 umgeschrieben. Von den 89093 Zeilen sind bei der Spalte \"Vergleich Zeitraum\" nur 4346 Daten vorhanden. Da die Vergleiche in dem vorliegenden Kontext nicht relevant sind, können diese ignoriert werden. Es fällt noch auf, dass bei den VALUE 4148 Daten fehlen. Wenn man diese fehlende Daten betrachtet, erkennt man, dass dies mit dem Status zusammenhängt. Ein Blick auf die Metadaten-Beschreibung gibt Aufschluss darüber. Daten, die mit M gekennzeichnet sind, entfallen, weil trivial oder Begriffe nicht anwendbar. Der Status Q bedeutet, dass die Daten aus Datenschutzgründen entfallen. Daher können auch diese Daten ignoriert werden. Der Status wird aus diesem Grund nicht in die Datenbank importiert. Der Vergleichszeitraum ist für diese Arbeit nicht verwendbar. Die Daten stammen aus dem Jahr 2019 und die Smartmeter Daten werden erst seit 2020 erfasst. Daher ergibt sich keine Überschneidung und ermöglicht daher keine Untersuchung über die Zeit im Zusammenhang mit dem Stromverbrauch.\n",
     "- **PERIOD_REF**, Messzeitraum\n",
     "- **PERIOD_COMP**, Vergleichszeitraum\n",
     "- **CODE_REGION**, BFS-Nummer\n",
@@ -1451,9 +1451,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Für weitere Analyse unter den verschiedenen Indikatoren, werden diese in eigenständige Dataframes geladen."
-   ]
+   "source": "Für weitere Analyse unter den verschiedenen Indikatoren werden diese in eigenständige Dataframes geladen."
   },
   {
    "cell_type": "code",
@@ -1491,9 +1489,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Beim Vergleich der Bevölkerungsgrösse mit den Anzahl Haushalten ist erkennbar, dass je grösser die Bevölkerung der Gemeinde ist, desto mehr Haushalte hat diese. Mit einer Korrelation von 0.99 werden die Daten sehr gut, durch die gezeichnete Gerade beschrieben."
-   ]
+   "source": "Beim Vergleich der Bevölkerungsgrösse mit der Anzahl Haushalten ist erkennbar, dass je grösser die Bevölkerung der Gemeinde ist, desto mehr Haushalte hat diese. Mit einer Korrelation von 0.99 werden die Daten sehr gut durch die gezeichnete Gerade beschrieben."
   },
   {
    "cell_type": "code",
@@ -1552,9 +1548,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Auf der unten dargestellten Heatmap werden die Korrelationen zwischen den einzelnen Parametern gut ersichtlich. Man kann feststellen, dass je mehr Einwohner:innen in der Gemeinde beheimatet sind mehr Haushalte, merh Arbeitstaetige und mehr Siedlungsfläche vorhanden sind. Interessant ist ebenfalls der Zusammenhang zwischen der Gesamtfläche und den Waldflächen sowie Landwirtschaftsflächen. Je höher die Gesamtfläche ist, desto höher sind ebenfalls die vorher genannten Flächen."
-   ]
+   "source": "Auf der unten dargestellten Heatmap werden die Korrelationen zwischen den einzelnen Parametern gut ersichtlich. Man kann feststellen, dass je mehr Einwohner:innen in der Gemeinde beheimatet sind, mehr Haushalte, mehr Arbeitstätige und mehr Siedlungsfläche vorhanden sind. Interessant ist ebenfalls der Zusammenhang zwischen der Gesamtfläche und den Waldflächen sowie Landwirtschaftsflächen. Je höher die Gesamtfläche ist, desto höher sind ebenfalls die vorher genannten Flächen."
   },
   {
    "cell_type": "code",
@@ -1589,9 +1583,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "In der nachfolgenden Karte wird der prozentuale Anteil von Landwirtschaftsflächen dargestellt. Es wird ersichtlich das rund um Luzern der Anteil gering ist. Dasselbe gilt im Amt Entlebuch dort sind die Landwirtschaftliche Flächen anteilsmässig gering. Dafür spielt die Landwirtschaft in den Ämtern Willisau, Hochdorf und Sursee eine grössere Rolle."
-   ]
+   "source": "In der nachfolgenden Karte wird der prozentuale Anteil von Landwirtschaftsflächen dargestellt. Es wird ersichtlich, dass rund um Luzern der Anteil gering ist. Dasselbe gilt im Amt Entlebuch, dort sind die Landwirtschaftliche Flächen anteilsmässig gering. Dafür spielt die landwirtschaft in den Ämtern Willisau, Hochdorf und Sursee eine grössere Rolle."
   },
   {
    "cell_type": "code",
@@ -1679,9 +1671,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Bei der Betrachtung der Waldfläche, sticht das Amt Entlebuch stark hervor. Die anderen Regionen sind sich ähnlich."
-   ]
+   "source": "Bei der Betrachtung der Waldfläche sticht das Amt Entlebuch stark hervor. Die anderen Regionen sind sich ähnlich."
   },
   {
    "cell_type": "code",
@@ -1949,9 +1939,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Tatsächlich scheint in Hochdorf der Stromverbrauch in der derselben Periode, in welcher zahlreiche Daten von Smartmetern fehlen, massiv höher gewesen zu sein. "
-   ]
+   "source": "Tatsächlich scheint in Hochdorf der Stromverbrauch in derselben Periode, in welcher zahlreiche Daten von Smartmetern fehlen, massiv höher gewesen zu sein. "
   },
   {
    "cell_type": "code",
@@ -2764,9 +2752,7 @@
      "outputs_hidden": false
     }
    },
-   "source": [
-    "Bisher wurden sämtliche Daten ohne Zugehörigkeit zu einer Gemeinde importiert. Jetzt fehlt eine Zuordnung eines Meteoparameters inkl. zugehörigier Messstation zu einer Gemeinde. Besonders für solche welche über keine eigene Messtation verfügen. Dieses Mapping wird manuell durchgeführt. Unterstützend wird eine Karte generiert, auf welcher sämtliche Messstationen aufgeführt sind. Die Koordinaten der Messstationen müssen jeweils umgerechnet werden von LV03 auf WGS84. Dazu liefert Swisstopo auf Github ein entsprechendes Skript (Swisstopo, [Online-Quelle](https://github.com/ValentinMinder/Swisstopo-WGS84-LV03/tree/master)). Für die Umrechnung wird die Funktion CHtoWGSlat verwendet."
-   ]
+   "source": "Bisher wurden sämtliche Daten ohne Zugehörigkeit zu einer Gemeinde importiert. Jetzt fehlt eine Zuordnung eines Meteoparameters inkl. zugehörigier Messstation zu einer Gemeinde. Besonders für solche, welche über keine eigene Messtation verfügen. Dieses Mapping wird manuell durchgeführt. Unterstützend wird eine Karte generiert, auf welcher sämtliche Messstationen aufgeführt sind. Die Koordinaten der Messstationen müssen jeweils umgerechnet werden von LV03 auf WGS84. Dazu liefert Swisstopo auf Github ein entsprechendes Skript (Swisstopo, [Online-Quelle](https://github.com/ValentinMinder/Swisstopo-WGS84-LV03/tree/master)). Für die Umrechnung wird die Funktion CHtoWGSlat verwendet."
   },
   {
    "cell_type": "code",
