--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -83,12 +83,12 @@
     "from statsmodels.tsa.stattools import adfuller\n",
     "\n",
     "import pmdarima as pm\n",
-    "from tbats import TBATS, BATS\n",
+    "from tbats import TBATS\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics import r2_score\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "\n",
     "\n",
     "# Settings for clean html export\n",
     "pio.renderers.default = \"plotly_mimetype+notebook\""
@@ -143,8 +143,8 @@
     "        # Axiliary values (% Bern)\n",
     "        y_aux = (y - 600000) / 1000000\n",
     "        x_aux = (x - 200000) / 1000000\n",
-    "        lng = (2.6779094 + (4.728982 * y_aux) + \\\n",
-    "               + (0.791484 * y_aux * x_aux) + \\\n",
+    "        lng = (2.6779094 + (4.728982 * y_aux) + \n",
+    "               + (0.791484 * y_aux * x_aux) + \n",
     "               + (0.1306 * y_aux * pow(x_aux, 2))) + \\\n",
     "              - (0.0436 * pow(y_aux, 3))\n",
     "        # Unit 10000\" to 1\" and convert seconds to degrees (dec)\n",
@@ -199,9 +199,9 @@
     "        # Axiliary values (% Bern)\n",
     "        lat_aux = (lat - 169028.66) / 10000\n",
     "        lng_aux = (lng - 26782.5) / 10000\n",
-    "        x = ((200147.07 + (308807.95 * lat_aux) + \\\n",
-    "              + (3745.25 * pow(lng_aux, 2)) + \\\n",
-    "              + (76.63 * pow(lat_aux,2))) + \\\n",
+    "        x = ((200147.07 + (308807.95 * lat_aux) + \n",
+    "              + (3745.25 * pow(lng_aux, 2)) + \n",
+    "              + (76.63 * pow(lat_aux,2))) + \n",
     "             - (194.56 * pow(lng_aux, 2) * lat_aux)) + \\\n",
     "            + (119.79 * pow(lat_aux, 3))\n",
     "        return x\n",
@@ -748,16 +748,11 @@
   },
   {
    "cell_type": "markdown",
-   "source": "Zuerst aber eine Grafik, welche auf der linken y-Achse den Verbrauch darstellt und rechts die Sonnenminute. Bei der Betrachtung des Stromverbrauches erkennt man ebenfalls eine Saisonalität. Im Winter steigt der durchschnittliche Stromverbrauch und im Sommer nimmt dieser ab. Im Gegensatz zu der Sonne, welche zeitweise den Boden nicht erreicht (min = 0), wird permanent Strom verbraucht und ist nie 0.",
    "id": "8f6726e9cde06e53",
-   "metadata": {}
-  },
-  {
    "metadata": {},
    "source": [
-    "Zuerst aber eine Grafik, welche auf der linken y-Achse den Verbrauch dargestellt und rechts die Sonnenminute. Bei der Betrachtung des Stromverbrauches erkennt man ebenfalls eine Saisonalität. Im Winter steigt der durchschnittliche Stromverbrauch und im Sommer nimmt dieser ab. Im Gegensatz zu der Sonne, welche zeitweise den Boden nicht erreicht (min = 0), wird permanent Strom verbraucht und ist nie 0."
-   ],
-   "id": "5495a70e811a48d8"
+    "Zuerst aber eine Grafik, welche auf der linken y-Achse den Verbrauch darstellt und rechts die Sonnenminute. Bei der Betrachtung des Stromverbrauches erkennt man ebenfalls eine Saisonalität. Im Winter steigt der durchschnittliche Stromverbrauch und im Sommer nimmt dieser ab. Im Gegensatz zu der Sonne, welche zeitweise den Boden nicht erreicht (min = 0), wird permanent Strom verbraucht und ist nie 0."
+   ]
   },
   {
    "cell_type": "code",
@@ -778,25 +773,22 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "print(ax1.get_legend_handles_labels())",
    "id": "cfeebb6d269786e2",
+   "metadata": {},
+   "source": [
+    "print(ax1.get_legend_handles_labels())"
+   ],
    "outputs": [],
    "execution_count": null
   },
   {
    "cell_type": "markdown",
-   "source": "Für den Umgang mit den NA Werten werden zunächst die unnötigen Spalten entfernt und kontrolliert, ob jedes Datum vorhanden ist.",
    "id": "a86001b9bcd79797",
-   "metadata": {}
-  },
-  {
    "metadata": {},
    "source": [
-    "Für den Umgang mit den NA Werten, werden zunächst die unnötigen Spalten entfernt und kontrolliert, ob jedes Datum vorhanden ist."
-   ],
-   "id": "5dbeb046617f60f5"
+    "Für den Umgang mit den NA Werten werden zunächst die unnötigen Spalten entfernt und kontrolliert, ob jedes Datum vorhanden ist."
+   ]
   },
   {
    "cell_type": "code",
@@ -1007,9 +999,11 @@
   },
   {
    "cell_type": "markdown",
-   "source": "Für eine bessere optische Ansicht wird mit den Korrelation-Werten eine Heatmap erstellt. Zuerst für die östliche Seite. Was sofort auffällt, sind die beiden dunklen Vierecke. Unten rechts sind die Korrelationen der Sonnenminuten zwischen den Gemeinden. Diese Werte sind sehr hoch. Somit scheint die Sonne vielerorts gleichzeitig und unterscheidet sich im Schnitt pro Tag nicht sehr stark. Oben links befinden sich die Korrelationen zwischen den Gemeinden und des Stromverbrauchs. Vielfach verhaltet sich der Stromverbrauch ähnlich zu den Gemeinden. Es gibt aber einige Ausreisser. Dies kann mit den aussergewöhnlichen Anomalien zusammenhängen, welche bei einigen Ortschaften in der ersten Analyse der Smartmeter erkannt wurden. Dies ist z.B. bei der Gemeinde Kriens (plz=6010/BFS-Nummer=1059) der Fall. Die verbleibenden Quadranten geben die Korrelation zwischen dem Stromverbrauch und den Sonnenminuten an. Was sich bei Meggen angedeutet hat lässt sich mit der Heatmap bestätigen. Die Korrelation liegt im Bereich von ca. -0.5. Ausser bei denen, welche bereits eine schwache Korrelation bei den Zählerdaten vorweisen. Dort geht die Korrelation noch weiter zurück bis gegen 0.",
    "id": "80d453ce26494593",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "Für eine bessere optische Ansicht wird mit den Korrelation-Werten eine Heatmap erstellt. Zuerst für die östliche Seite. Was sofort auffällt, sind die beiden dunklen Vierecke. Unten rechts sind die Korrelationen der Sonnenminuten zwischen den Gemeinden. Diese Werte sind sehr hoch. Somit scheint die Sonne vielerorts gleichzeitig und unterscheidet sich im Schnitt pro Tag nicht sehr stark. Oben links befinden sich die Korrelationen zwischen den Gemeinden und des Stromverbrauchs. Vielfach verhaltet sich der Stromverbrauch ähnlich zu den Gemeinden. Es gibt aber einige Ausreisser. Dies kann mit den aussergewöhnlichen Anomalien zusammenhängen, welche bei einigen Ortschaften in der ersten Analyse der Smartmeter erkannt wurden. Dies ist z.B. bei der Gemeinde Kriens (plz=6010/BFS-Nummer=1059) der Fall. Die verbleibenden Quadranten geben die Korrelation zwischen dem Stromverbrauch und den Sonnenminuten an. Was sich bei Meggen angedeutet hat lässt sich mit der Heatmap bestätigen. Die Korrelation liegt im Bereich von ca. -0.5. Ausser bei denen, welche bereits eine schwache Korrelation bei den Zählerdaten vorweisen. Dort geht die Korrelation noch weiter zurück bis gegen 0."
+   ]
   },
   {
    "cell_type": "code",
@@ -1206,9 +1200,11 @@
   },
   {
    "cell_type": "markdown",
-   "source": "Abschliessend kann gesagt werden, dass die Sonne wohl keinen direkten Einfluss auf den Stromverbrauch hat.",
    "id": "b127b068f2a1bac6",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "Abschliessend kann gesagt werden, dass die Sonne wohl keinen direkten Einfluss auf den Stromverbrauch hat."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3404,7 +3400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
